--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "typescript": "4.3.5"
   },
   "lint-staged": {
-    "*.@(ts|tsx)": [
-      "yarn lint",
-      "yarn format"
+    "./src/**/*.{ts,tsx}": [
+      "yarn eslint",
+      "prettier --write \"./src/**/*.{ts,tsx}\""
     ]
   }
 }
